@@ -2,7 +2,7 @@
 
 --- a/setup.py
 +++ b/setup.py
-@@ -452,8 +452,10 @@ class PyBuildExt(build_ext):
+@@ -437,8 +437,10 @@ class PyBuildExt(build_ext):
          # unfortunately, distutils doesn't let us provide separate C and C++
          # compilers
          if compiler is not None:
@@ -15,7 +15,7 @@
          self.compiler.set_executables(**args)
  
      def build_extensions(self):
-@@ -740,12 +742,7 @@ class PyBuildExt(build_ext):
+@@ -725,12 +727,7 @@ class PyBuildExt(build_ext):
                          add_dir_to_list(dir_list, directory)
  
      def configure_compiler(self):
