@@ -2,7 +2,7 @@
 
 --- a/configure.ac
 +++ b/configure.ac
-@@ -4605,8 +4605,13 @@ int main(void) {
+@@ -4626,8 +4626,13 @@ int main(void) {
  AC_MSG_RESULT($ac_cv_posix_semaphores_enabled)
  if test $ac_cv_posix_semaphores_enabled = no
  then
@@ -18,7 +18,7 @@
  fi
  
  # Multiprocessing check for broken sem_getvalue
-@@ -4641,8 +4646,13 @@ int main(void){
+@@ -4662,8 +4667,13 @@ int main(void){
  AC_MSG_RESULT($ac_cv_broken_sem_getvalue)
  if test $ac_cv_broken_sem_getvalue = yes
  then
