@@ -11,7 +11,7 @@
        <script type="text/javascript" src="{{ pathto('_static/switchers.js', 1) }}"></script>{% endif %}
 --- a/Lib/idlelib/help.html
 +++ b/Lib/idlelib/help.html
-@@ -25,7 +25,7 @@
+@@ -26,7 +26,7 @@
      <link rel="copyright" title="Copyright" href="../copyright.html" />
      <link rel="next" title="Other Graphical User Interface Packages" href="othergui.html" />
      <link rel="prev" title="tkinter.tix — Extension widgets for Tk" href="tkinter.tix.html" />
