@@ -1,8 +1,6 @@
-diff --git a/Modules/_decimal/_decimal.c b/Modules/_decimal/_decimal.c
-index 664d45a90481d..bbd540bc376e2 100644
 --- a/Modules/_decimal/_decimal.c
 +++ b/Modules/_decimal/_decimal.c
-@@ -3295,7 +3295,7 @@ dec_format(PyObject *dec, PyObject *args)
+@@ -3280,7 +3280,7 @@ dec_format(PyObject *dec, PyObject *args
      }
      else {
          size_t n = strlen(spec.dot);
@@ -11,7 +9,7 @@ index 664d45a90481d..bbd540bc376e2 100644
              /* fix locale dependent non-ascii characters */
              dot = dotsep_as_utf8(spec.dot);
              if (dot == NULL) {
-@@ -3304,7 +3304,7 @@ dec_format(PyObject *dec, PyObject *args)
+@@ -3289,7 +3289,7 @@ dec_format(PyObject *dec, PyObject *args
              spec.dot = PyBytes_AS_STRING(dot);
          }
          n = strlen(spec.sep);
@@ -20,11 +18,9 @@ index 664d45a90481d..bbd540bc376e2 100644
              /* fix locale dependent non-ascii characters */
              sep = dotsep_as_utf8(spec.sep);
              if (sep == NULL) {
-diff --git a/setup.py b/setup.py
-index ddc0bd067d4e4..c547a68664e8c 100644
 --- a/setup.py
 +++ b/setup.py
-@@ -2199,7 +2199,7 @@ def detect_decimal(self):
+@@ -2193,7 +2193,7 @@ class PyBuildExt(build_ext):
          undef_macros = []
          if '--with-system-libmpdec' in sysconfig.get_config_var("CONFIG_ARGS"):
              include_dirs = []
