@@ -1,6 +1,6 @@
 --- a/Lib/sysconfig.py
 +++ b/Lib/sysconfig.py
-@@ -343,9 +343,8 @@ def get_makefile_filename():
+@@ -353,9 +353,8 @@ def get_makefile_filename():
  
  def _get_sysconfigdata_name():
      return os.environ.get('_PYTHON_SYSCONFIGDATA_NAME',
@@ -13,7 +13,7 @@
  
 --- a/Makefile.pre.in
 +++ b/Makefile.pre.in
-@@ -1536,8 +1536,10 @@ libinstall:	build_all $(srcdir)/Modules/
+@@ -1537,8 +1537,10 @@ libinstall:	build_all $(srcdir)/Modules/
  			esac; \
  		done; \
  	done
@@ -26,7 +26,7 @@
  	$(INSTALL_DATA) $(srcdir)/LICENSE $(DESTDIR)$(LIBDEST)/LICENSE.txt
  	if test -d $(DESTDIR)$(LIBDEST)/distutils/tests; then \
  		$(INSTALL_DATA) $(srcdir)/Modules/xxmodule.c \
-@@ -1692,6 +1694,7 @@ sharedinstall: sharedmods
+@@ -1693,6 +1695,7 @@ sharedinstall: sharedmods
  		--install-scripts=$(BINDIR) \
  		--install-platlib=$(DESTSHARED) \
  		--root=$(DESTDIR)/
