@@ -8,6 +8,7 @@ python3.9 (3.9.2~rc1-1) UNRELEASED; urgency=medium
   * Build a python3.9-full package.
   * idle-python3.9: Drop dependency on libjs-mathjax, Unused in 3.8 and 3.9.
   * python3.9-doc: Fix links to the documentation in /usr/share/doc/python3.9.
+  * Refresh patches.
 
  -- Matthias Klose <doko@debian.org>  Wed, 17 Feb 2021 14:47:41 +0100
 
